[gd_scene load_steps=2 format=3 uid="uid://g3nsxqjc0ba"]

[ext_resource type="Script" path="res://menuscene.gd" id="1_n4q0c"]

[node name="Menuscene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n4q0c")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 640.0

[node name="Playbutton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -68.0
offset_right = 128.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
text = "play"

[node name="playercountpanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -192.0
offset_right = 128.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2

[node name="countbuttoncontainer" type="VBoxContainer" parent="playercountpanel"]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.0
offset_top = -132.0
offset_right = 76.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="_2playerbutton" type="Button" parent="playercountpanel/countbuttoncontainer"]
layout_mode = 2
size_flags_vertical = 3
text = "VS. 1 Player"

[node name="_3playerbutton" type="Button" parent="playercountpanel/countbuttoncontainer"]
layout_mode = 2
size_flags_vertical = 3
text = "VS. 2 Players"

[node name="_4playerbutton" type="Button" parent="playercountpanel/countbuttoncontainer"]
layout_mode = 2
size_flags_vertical = 3
text = "VS. 3 Players"

[node name="Panel2" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 256.0
offset_top = 128.0
offset_right = 896.0
offset_bottom = 512.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel2"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 632.0
offset_bottom = 376.0
theme_override_constants/separation = 35
alignment = 1

[node name="vsAIbutton" type="Button" parent="Panel2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "vs Ai "

[node name="Passandplaybutton" type="Button" parent="Panel2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Pass and play"

[connection signal="pressed" from="Playbutton" to="." method="_on_playbutton_pressed"]
[connection signal="pressed" from="Panel2/VBoxContainer/vsAIbutton" to="." method="_on_vs_a_ibutton_pressed"]
